--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@
  before_install:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - npm install -g grunt@0.3.x testacular@0.4.x
+  - npm install -g testacular@0.4.x
+  - npm install -g bower
+  - bower install
 
- script: "grunt"
+ script: "testacular start components/angular-module/test.conf.js --browsers=Firefox,PhantomJS"
