--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@
  before_install:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - npm install -g testacular@0.4.x
-  - npm install -g bower
+  - npm install -g bower karma
   - bower install
 
- script: "testacular start components/angular-module/test.conf.js --browsers=Firefox,PhantomJS"
+ script: "karma start test/test.conf.js --browsers=Firefox,PhantomJS"
