--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,17 @@
  node_js:
    - "0.8"
 
- before_install:
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
-  - npm install -g bower karma
-  - bower install
-
- script: "karma start test/test.conf.js --browsers=Firefox,PhantomJS"
+before_install:
+- export DISPLAY=:99.0
+- sh -e /etc/init.d/xvfb start
+- npm install -g bower grunt-cli
+- npm install
+- bower install
+before_script: out/.travis/before_script.sh
+after_success: out/.travis/after_success.sh
+branches:
+  only:
+ - master
+env:
+  global:
+  - REPO="git@github.com:douglasduteil/ui-map.git"
