--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,18 @@
- language: node_js
- node_js:
-   - "0.8"
-
-before_install:
-- export DISPLAY=:99.0
-- sh -e /etc/init.d/xvfb start
-- npm install -g bower grunt-cli
-- npm install
-- bower install
-before_script: out/.travis/before_script.sh
+--- 
 after_success: out/.travis/after_success.sh
-branches:
-  only:
- - master
-env:
-  global:
-  - REPO="git@github.com:douglasduteil/ui-map.git"
+before_install: 
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - "npm install -g bower grunt-cli"
+  - "npm install"
+  - "bower install"
+before_script: out/.travis/before_script.sh
+branches: 
+  only: 
+    - master
+env: 
+  global: 
+    - "REPO=\"git@github.com:douglasduteil/ui-map.git\""
+language: node_js
+node_js: 
+  - "0.8"
