--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ before_install:
 - npm install -g bower grunt-cli
 - npm install
 - bower install
-before_script: out/.travis/before_script.sh
+before_script: components/angular-ui-docs/.travis/before_script.sh
 script: grunt
-after_success: out/.travis/after_success.sh
+after_success: components/angular-ui-docs/.travis/after_success.sh
 branches:
   only:
   - master
