--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "grunt-karma": "~0.4.x",
     "grunt-contrib-jshint": "~0.5.3",
     "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-copy": "~0.4.1"
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-watch": "~0.5.1"
   },
   "scripts": {},
   "repository": {
