--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "grunt-contrib-jshint": "~0.5.3",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-watch": "~0.5.1"
+    "grunt-contrib-watch": "~0.5.1",
+    "grunt-conventional-changelog": "~1.0.0"
   },
   "scripts": {},
   "repository": {
