--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "grunt-contrib-watch": "0.5.x",
     "grunt-conventional-changelog": "1.x",
     "grunt-karma": "0.6.x",
+    "grunt-ngmin": "0.0.x",
     "karma": "0.10.x",
     "karma-chrome-launcher": "0.1.x",
     "karma-coffee-preprocessor": "0.1.x",
