--- a/.travis.yml
+++ b/.travis.yml
@@ -2,19 +2,17 @@
 language: node_js
 node_js:
 - '0.10'
-- '0.8'
 before_install:
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
-- npm install -g bower grunt-cli
-- npm install
-- bower install
-before_script: bower_components/angular-ui-docs/.travis/before_script.sh
+- npm install -qg bower grunt-cli
+- npm install -q
+- bower install --force
+- bower install --force
+after_success:
+- "./node_modules/angular-ui-publisher/travis/authentication.sh || exit 0"
+- "grunt dist build:gh-pages publish:gh-pages build:bower publish:bower"
 script: grunt
-after_success: bower_components/angular-ui-docs/.travis/after_success.sh
-branches:
-  only:
-  - master
 env:
   global:
   - REPO="git@github.com:angular-ui/ui-map.git"
