--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
   "main": "./ui-map.js",
   "dependencies": {
     "angular": "1.x",
-    "angular-ui-utils": "0.x"
+    "angular-ui-utils": "event-0.1.0"
   },
   "devDependencies": {
     "angular-mocks": "1.x"
